@startuml prontuario
class Paciente {
  - nome: string
  - cpf: char
  - data_nascimento: date
  - sexo: string
  - endereço: string
  - historico: string
  + construtor(nome, cpf, data_nascimentoa, sexo, endereco, historico)
}

class Medico {
  - nome: string
  - especialidade: string
  - paciente: Paciente
  + construtor(id, nome, especialidade, paciente)
}

class Medicamento {
  - nome: string
  - numero_lote: int
  - validade: date
  + construtor(nome, numero_lote, validade)
}


class Prescricao {
  - medicamento: Medicamento
  - dosagem: string
  - frequencia: string
  - tratamento: string
  + construtor(medicamentos, dosagem, frequencia, tratamento)
}

class Aplicacao_medicamento {
  - prescricao: Prescricao
  - medicamento: Medicamento
}
class Prontuario {
  - medico: Medico
  - paciente: Paciente
  - data_criacao: date
  - sintomas: string
  - diagnostico: string
  + construtor(paciente, data_criacao, sintomas, diagnostico)
}


class Farmacia {
  - estoque: string
  - medicamento: Medicamento
  - lotes: string
  + construtor(estoque, medicamento, lotes)
}



Paciente --* Prontuario
Medico --* Prontuario
Prontuario *-- Prescricao
Farmacia --* Medicamento
Aplicacao_medicamento *-- Prescricao
Aplicacao_medicamento *-- Medicamento
@enduml
